Titles and Body on mobile fixed.
-Both mobile and desktop are now using the same font
-Titles now have their PINK shadow adapting to the screen sizes
-

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,8 +268,8 @@ span {
 .tubelight span{
   color:#fff;
   text-transform:uppercase;
-/*   font-family: 'Pacifico', cursive; */
-  font-family: 'Monda', sans-serif;
+   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size:10em;
   animation:animate .38s linear;
   animation-iteration-count:2;
@@ -1809,7 +1809,8 @@ footer {
 
   font-weight: 700;
   color:#FF006A;
-    font-family: 'Arial Black', 'Helvetica', sans-serif; /* clean sans-serif */
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-style: italic; /* italic */
     letter-spacing: 0.5px; 
    
@@ -3509,7 +3510,7 @@ footer {
   padding: 15px 24px;
   position: relative;
   z-index: 1;
-  font-weight: 500;
+  font-weight: 900;
 }
 .touch-btn span i {
   color: var(White);
@@ -5746,7 +5747,7 @@ footer {
   .header-section .main-navbar .custom-nav .menu-link button,
   .header-section .main-navbar .custom-nav .menu-link a {
     font-size: 14px !important;
-    font-weight: 400 !important;
+    font-weight: 900 !important;
   }
 }
 @media (max-width: 575px) {
@@ -6756,14 +6757,12 @@ input.main-search-input::placeholder {
 }
 
 .yaytext-style {
-    font-family: 'Arial Black', 'Helvetica', sans-serif; /* clean sans-serif */
-    font-weight: 999; /* bold */
-    font-style: italic; /* italic */
-    letter-spacing: 0.5px; 
-  
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
-    
-    color: inherit; /* keeps existing color from your site */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 900 !important;
+  font-style: italic !important;
+  letter-spacing: 1px; /* increase spacing for chunkiness */
+ 
 }
 
 .solid-title-shadow {
@@ -6776,11 +6775,14 @@ input.main-search-input::placeholder {
 }
 
 .PINK-title-shadow {
-  text-shadow: 4.20px 7px 0 var(--theme);
+  text-shadow: 4.20px 4.20px 0 var(--theme);
 }
 
-.MINI-PINK-title-shadow {
-  text-shadow: 2px 3px 0 var(--theme);
+
+@media (max-width: 390px) {
+  .PINK-title-shadow {
+    text-shadow: 2.5px 2.5px 0 var(--theme); 
+  }
 }
 
 .FooterTitles {
